Updated locations.